# proxSIP

./: CMakeLists.txt  LICENSE.txt  README.md
docs/: Doxyfile
include/Application/: CAppConfig.h  CCallSession.h  CCallSniffer.h  CRemoteSwitch.h  CUdpProxy.h  IEvtHandlerDTMF.h  IUdpProxyMsgHandler.h  version.in.h
include/proxSIP/: CAsioUdpServer.h  CAuthValidator.h  CEndpoint.h  CKeyValueCollection.h  CKeyValuePair.h  CRtpMessage.h  CRtpPhoneEvent.h  CSIPRequest.h  CSIPResponse.h  CSdpMessage.h  CSipContact.h  CSipMessageHandler.h  CSipParser.h  CSipRegistry.h  CSipSerializer.h  CSipServer.h  CSipURI.h  CSipVia.h  ESdpAttrib.h  ESdpMediaProto.h  ESdpMediaType.h  ESdpType.h  ESipField.h  ESipMethods.h  ESipParameter.h  ESipStatusCode.h  ESipURIComponents.h  IAuthDigest.h  IAuthValidator.h  IBuffer.h  IContainer.h  IEndpoint.h  IField.h  IKeyValueCollection.h  IKeyValuePair.h  IMessage.h  IOutputBuffer.h  IRtpMessage.h  IRtpPayload.h  IRtpPhoneEvent.h  (+28 more)
include/proxSIP/Internal/: CAsioUdpServerImpl.h  CAuthDigestImpl.h  CAuthValidatorImpl.h  CEndpointImpl.h  CKeyValueCollectionImpl.h  CKeyValuePairImpl.h  CRtpMessageImpl.h  CRtpPhoneEventImpl.h  CSIPRequestImpl.h  CSIPResponseImpl.h  CSdpAttributeImpl.h  CSdpConnectionImpl.h  CSdpMediaImpl.h  CSdpMessageImpl.h  CSdpOriginatorImpl.h  CSdpRtpMapImpl.h  CSdpTimeImpl.h  CSipContactImpl.h  CSipRegistryImpl.h  CSipServerImpl.h  CSipURIImpl.h  CSipViaImpl.h  TBuffer.h  TContainer.h  TEndpoint.h  TSIPFieldImpl.h  TSIPMessageImpl.h  snscanf.h
resources/: proxSIP.json  resources.in.rc
src/Application/: CAppConfig.cpp  CCallSession.cpp  CCallSniffer.cpp  CRemoteSwitch.cpp  CUdpProxy.cpp  main.cpp
src/proxSIP/: CAsioUdpServer.cpp  CAuthValidator.cpp  CEndpoint.cpp  CKeyValueCollection.cpp  CKeyValuePair.cpp  CRtpMessage.cpp  CRtpPhoneEvent.cpp  CSIPRequest.cpp  CSdpMessage.cpp  CSipContact.cpp  CSipMessageHandler.cpp  CSipParser.cpp  CSipRegistry.cpp  CSipResponse.cpp  CSipSerializer.cpp  CSipServer.cpp  CSipURI.cpp  CSipVia.cpp  ESdpAttrib.cpp  ESdpMediaProto.cpp  ESdpMediaType.cpp  ESdpType.cpp  ESipField.cpp  ESipMethod.cpp  ESipParameter.cpp  ESipStatusCode.cpp  ESipURIComponents.cpp
src/proxSIP/Internal/: CAsioUdpServerImpl.cpp  CAuthDigestImpl.cpp  CAuthValidatorImpl.cpp  CEndpointImpl.cpp  CKeyValueCollectionImpl.cpp  CKeyValuePairImpl.cpp  CRtpMessageImpl.cpp  CRtpPhoneEventImpl.cpp  CSIPRequestImpl.cpp  CSIPResponseImpl.cpp  CSdpAttributeImpl.cpp  CSdpConnectionImpl.cpp  CSdpMediaImpl.cpp  CSdpMessageImpl.cpp  CSdpOriginatorImpl.cpp  CSdpRtpMapImpl.cpp  CSdpTimeImpl.cpp  CSipContactImpl.cpp  CSipRegistryImpl.cpp  CSipServerImpl.cpp  CSipURIImpl.cpp  CSipViaImpl.cpp  TSIPFieldImpl.cpp
